<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="title_home">Dicoding Event</string>
    <string name="title_available">Active Event</string>
    <string name="title_notavailable">Finished Event</string>
    <string name="summary">Stay Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_image">event_image</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="register">Register</string>
    <string name="penjelasan">penjelasan</string>
    <string name="description">Description</string>
    <string name="title_event_detail">Detail Event</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="detail_acara">Detail Acara</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="available_event">Active Event</string>
    <string name="not_available_event">Finished Event</string>
    <string name="searchbar_hint">Masukkan Kata</string>
    <string name="gambar">gambar</string>
</resources>