<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dicodingevent.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_event_available"
        android:name="com.example.dicodingevent.ui.event_available.EventAvailableFragment"
        android:label="@string/title_available"
        tools:layout="@layout/fragment_event_available">
        <action
            android:id="@+id/action_navigation_event_available_to_event_detail"
            app:destination="@id/navigation_event_detail" >
            <argument
                android:name="eventId"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_event_not_available"
        android:name="com.example.dicodingevent.ui.event_not_available.EventNotAvailableFragment"
        android:label="@string/title_notavailable"
        tools:layout="@layout/fragment_event_not_available">
        <action
            android:id="@+id/action_navigation_event_not_available_to_event_detail"
            app:destination="@id/navigation_event_detail" >
            <argument
                 android:name="eventId"
                 app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_event_detail"
        android:name="com.example.dicodingevent.ui.detail.EventDetailFragment"
        android:label="@string/title_event_detail"
        tools:layout="@layout/fragment_event_detail" />
</navigation>