<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <!-- Scrollable content inside ScrollView -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/available_event"
                android:textSize="20sp"
                android:paddingStart="8dp"
                android:textStyle="bold"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/image_slider"
                tools:ignore="RtlSymmetry" />

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                app:iss_auto_cycle="true"
                app:iss_corner_radius="20"
                app:iss_delay="0"
                app:iss_period="2000"
                app:iss_text_align="CENTER"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.015" />

            <TextView
                android:id="@+id/not_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="76dp"
                android:text="@string/not_available_event"
                android:textSize="20sp"
                android:paddingStart="8dp"
                android:paddingBottom="12dp"
                android:paddingTop="16dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_slider"
                tools:ignore="RtlSymmetry" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/not_available" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- ProgressBar positioned on top of the content -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center" />

    <!-- Error message positioned on top of the content -->
    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/error_loading_data"
        android:visibility="gone"
        android:textColor="@color/darkGray" />

</FrameLayout>
